- Corrections diverses - Corrections O.Pascal

--- a/first_author_papers.bib
+++ b/first_author_papers.bib
@@ -34,8 +34,8 @@
   doi = {10/fpkh48},
   abstract = {A new code for lower hybrid antenna design and cold plasma wave coupling, named ALOHA, is presented. ALOHA takes into account the poloidal dimension of the antennas and the coupling to slow and fast waves. Comparisons with experimental data for the LH antennas installed on Tore Supra and the TOPLHA code show that ALOHA is a fast and efficient predictive tool.},
   copyright = {All rights reserved},
-  file = {C\:\\Users\\JH218595\\Documents\\Bibliography\\Papers\\Fusion\\RF\\LHCD\\Hillairet et al._2009_Modeling of lower hybrid antennas using the ALOHA code and comparisons with Tore Supra experiments.pdf},
   journal = {Fusion Engineering and Design},
+  keywords = {\#nosource},
   language = {en},
   number = {2-6}
 }
@@ -80,8 +80,9 @@
   doi = {10/bk7844},
   abstract = {The Advanced LOwer Hybrid Antenna (ALOHA) code, has been developed to improve the modelling of the coupling of lower hybrid (LH) waves from the antenna to a cold inhomogeneous plasma while keeping a fast tool. In contrast to the previous code Slow Wave ANtenna (SWAN) (that only described the interaction of the slow wave between the waveguides and the plasma in a 1D model), the equations are now solved in 2D including the contribution of both the slow and fast waves, with a low computational cost. This approach is completed either by a full-wave computation of the antenna that takes into account its detailed geometry or by a mode-matching code dedicated to multijunctions modelling, which is convenient in preliminary design phases. Moreover, ALOHA can treat more realistic scrape-off layers in front of the antenna, by using a two-layer electron density profile. The ALOHA code has been compared with experimental results from Tore Supra LH antennas of different geometries, as well as benchmarked against other LH coupling codes, with very good results. Once validated, ALOHA has been used as a support for the design of COMPASS and ITER LH antennas and has shown to be a fast and reliable tool for LH antenna design.},
   copyright = {All rights reserved},
-  file = {C\:\\Users\\JH218595\\Documents\\Bibliography\\Papers\\Fusion\\RF\\LHCD\\Hillairet et al._2010_ALOHA an Advanced LOwer Hybrid Antenna coupling code.pdf},
+  file = {C\:\\Users\\JH218595\\Zotero\\storage\\M6MH8CGI\\Hillairet et al_2010_ALOHA.pdf},
   journal = {Nuclear Fusion},
+  keywords = {\#nosource},
   language = {en},
   number = {12}
 }
@@ -97,8 +98,9 @@
   doi = {10.1016/j.fusengdes.2011.03.003},
   abstract = {In the frame of the EFDA task HCD-08-03-01, a 5 GHz Lower Hybrid system which should be able to deliver 20 MW CW on ITER and sustain the expected high heat fluxes has been reviewed. The design and overall dimensions of the key RF elements of the launcher and its subsystem has been updated from the 2001 design in collaboration with ITER organization. Modeling of the LH wave propagation and absorption into the plasma shows that the optimal parallel index must be chosen between 1.9 and 2.0 for the ITER steady-state scenario. The present study has been made with n|| = 2.0 but can be adapted for n|| = 1.9. Individual components have been studied separately giving confidence on the global RF design of the whole antenna.},
   copyright = {All rights reserved},
-  file = {C\:\\Users\\JH218595\\Documents\\Bibliography\\Papers\\Fusion\\RF\\LHCD\\Hillairet et al._2011_RF modeling of the ITER-relevant lower hybrid antenna.pdf},
+  file = {C\:\\Users\\JH218595\\Zotero\\storage\\MMUPWZAJ\\Hillairet et al_2011_RF modeling of the ITER-relevant lower hybrid antenna.pdf},
   journal = {Fusion Engineering and Design},
+  keywords = {\#nosource},
   language = {en},
   number = {6-8}
 }
@@ -130,7 +132,7 @@
   doi = {10/ggc24b},
   abstract = {The nuclear fusion research goal is to demonstrate the feasibility of fusion power for peaceful purposes. In order to achieve the conditions similar to those expected in an electricity-generating fusion power plant, plasmas with a temperature of several hundreds of millions of degrees must be generated and sustained for long periods. For this purpose, RF antennas delivering multi-megawatts of power to magnetized confined plasma are commonly used in experimental tokamaks. In the gigahertz range of frequencies, high power phased arrays known as ``Lower Hybrid'' (LH) antennas are used to extend the plasma duration. This paper reviews some of the technological aspects of the LH antennas used in the Tore Supra tokamak and presents the current design of a proposed 20 MW LH system for the international experiment ITER.},
   copyright = {All rights reserved},
-  file = {C\:\\Users\\JH218595\\Documents\\Bibliography\\Papers\\Fusion\\RF\\LHCD\\Hillairet et al._2012_Lower Hybrid antennas for nuclear fusion experiments.pdf;C\:\\Users\\JH218595\\Zotero\\storage\\34RQHY73\\6205828.html},
+  file = {C\:\\Users\\JH218595\\Zotero\\storage\\7WBHE5DK\\Hillairet et al_2012_Lower Hybrid antennas for nuclear fusion experiments.pdf;C\:\\Users\\JH218595\\Zotero\\storage\\34RQHY73\\6205828.html},
   keywords = {antennas in plasma,Current Drive,electricity-generating fusion power plant,fusion power feasibility,fusion reactor design,gigahertz frequency range,high power,high power phased arrays,ITER,Lower Hybrid,lower hybrid antennas,magnetized confined plasma,multimegawatt power,nuclear fusion,Nuclear Fusion,phased array,plasma temperature,plasma toroidal confinement,plasma transport processes,power 20 MW,rectangular waveguide,RF antennas,Tokamak devices,Tore Supra,Tore Supra tokamak}
 }
 
@@ -144,8 +146,9 @@
   doi = {10/f22s7q},
   abstract = {The sustainment of steady-state plasmas in tokamaks requires efficient current drive systems. Lower Hybrid Current Drive (LHCD) is currently the most efficient method to generate a continuous additional off-axis toroidal plasma current as well as reduce the poloidal flux consumption during the plasma current ramp-up phase. The operation of the Tore Supra ITER-like LH launcher and 700kW CW klystrons have demonstrated the ability to couple LH power at ITER-like power densities with very low reflected power during long pulses. However, in order to achieve pure stationary LH sustained plasmas, some R\&D are needed to increase the reliability of all the systems and codes, from the RF sources to the plasma scenario prediction. The CEA/IRFM is addressing some of these issues by leading a R\&D program toward an ITER LH system and by the validation of an integrated LH modeling suite of codes. In 2011, the RF design of a mode converter has been validated at low power. A 500 kW/5 s RF window is currently under manufacturing and will be tested at high power in 2012 in collaboration with NFRI. All of this work aims to reduce the operational risks associated with the ITER steady-state operations.},
   copyright = {All rights reserved},
-  file = {C\:\\Users\\JH218595\\Documents\\Bibliography\\Papers\\Fusion\\RF\\LHCD\\Hillairet et al._2013_Recent progress on lower hybrid current drive and implications for ITER.pdf},
+  file = {C\:\\Users\\JH218595\\Zotero\\storage\\DDB6TR7I\\Hillairet et al_2013_Recent progress on lower hybrid current drive and implications for ITER.pdf},
   journal = {Nuclear Fusion},
+  keywords = {\#nosource},
   language = {en},
   number = {7}
 }
@@ -161,8 +164,8 @@
   doi = {10/ggc2xc},
   abstract = {In the frame of a R\&D effort conducted by CEA towards the design and the qualification of a 5 GHz LHCD system for the ITER tokamak, two 5 GHz 500 kW/5 s windows have been designed, manufactured and tested at high power in collaboration with the National Fusion Research Institute (NFRI). The window design rely on a symmetrical pill-box concept with a cylindrical beryllium oxide ceramic brazed on an actively water cooled copper skirt. The ceramic RF properties have been measured on a test sample to get realistic values for guiding the design. Low power measurements of the manufactured windows show return losses below -32 dB and insertion losses between -0.01 dB and -0.05 dB, with an optimum frequency shifted toward lower frequencies. High power tests conducted at NFRI show unexpected total power loss for both windows. The ceramic temperature during RF pulses has been found to reach unexpected high temperature, preventing these windows to be used under CW conditions. A post-mortem RF analysis of samples taken from one window shows that the dielectric properties of the ceramic were not the ones measured on the manufacturer sample, which partly explain the differences with the reference modelling.},
   copyright = {All rights reserved},
-  file = {C\:\\Users\\JH218595\\Documents\\Bibliography\\Papers\\Fusion\\RF\\LHCD\\Hillairet et al._2015_Design and tests of 500kW RF windows for the ITER LHCD system.pdf},
   journal = {Fusion Engineering and Design},
+  keywords = {\#nosource},
   language = {en}
 }
 
@@ -177,8 +180,8 @@
   doi = {10/ggc262},
   abstract = {Embedded RF contacts are integrated within the ITER ICRH launcher to allow assembling, sliding and to lower the thermo-mechanical stress. They have to withstand a peak RF current up to 2.5 kA at 55 MHz in steady-state conditions, in the vacuum environment of the machine. The contacts have to sustain a temperature up to 250 {$\smwhtcircle$}C during several days in baking operations and have to be reliable during the whole life of the launcher without degradation. The RF contacts are critical components for the launcher performance and intensive R\&D is therefore required, since no RF contacts have so far been qualified at these specifications. In order to test and validate the anticipated RF contacts in operational conditions, CEA has prepared a test platform consisting of a steady-state vacuum pumped RF resonator. In collaboration with ITER Organization and the CYCLE consortium (CYclotron CLuster for Europe), an R\&D program has been conducted to develop RF contacts that meet the ITER ICRH launcher specifications. A design proposed by CYCLE consortium, using brazed lamellas supported by a spring to improve thermal exchange efficiency while guaranteeing high contact force, was tested successfully in the Tresonator up to 1.7 kA during 1200 s, but failed for larger current values due to a degradation of the contacts. Details concerning the manufacturing of the brazed contacts on its titanium holder, the RF tests results performed on the resonator and the non-destructive tests analysis of the contacts are given in this paper.},
   copyright = {All rights reserved},
-  file = {C\:\\Users\\JH218595\\Documents\\Bibliography\\Papers\\Fusion\\RF\\ICRH\\Hillairet et al._2015_R&D activities on RF contacts for the ITER ion cyclotron resonance heating launcher.pdf},
   journal = {Fusion Engineering and Design},
+  keywords = {\#nosource},
   language = {en}
 }
 
@@ -193,7 +196,7 @@
   doi = {10/ggc294},
   abstract = {The design of the WEST (Tungsten-W Environment in Steady-state Tokamak) Ion cyclotron resonance heating antennas is based on a previously tested conjugate-T Resonant Double Loops prototype equipped with internal vacuum matching capacitors. The design and construction of three new WEST ICRH antennas are being carried out in close collaboration with ASIPP, within the framework of the Associated Laboratory in the fusion field between IRFM and ASIPP. The coupling performance to the plasma and the load-tolerance have been improved, while adding Continuous Wave operation capability by introducing water cooling in the entire antenna. On the generator side, the operation class of the high power tetrodes is changed from AB to B in order to allow high power operation (up to 3 MW per antenna) under higher VSWR (up to 2:1). Reliability of the generators is also improved by increasing the cavity breakdown voltage. The control and data acquisition system is also upgraded in order to resolve and react on fast events, such as ELMs. A new optical arc detection system comes in reinforcement of the Vr/Vf and SHAD systems.},
   copyright = {All rights reserved},
-  file = {C\:\\Users\\JH218595\\Documents\\Bibliography\\Papers\\Fusion\\RF\\ICRH\\Hillairet et al._2015_Ion cyclotron resonance heating systems upgrade toward high power and CW operations in WEST.pdf;C\:\\Users\\JH218595\\Zotero\\storage\\G45KS82X\\Hillairet et al_2015_Ion cyclotron resonance heating systems upgrade toward high power and CW.pdf;C\:\\Users\\JH218595\\Zotero\\storage\\VIPPH6CQ\\1.html},
+  file = {C\:\\Users\\JH218595\\Zotero\\storage\\G45KS82X\\Hillairet et al_2015_Ion cyclotron resonance heating systems upgrade toward high power and CW.pdf;C\:\\Users\\JH218595\\Zotero\\storage\\VIPPH6CQ\\1.html},
   language = {en}
 }
 
@@ -222,8 +225,8 @@
   doi = {10/gdmjr3},
   abstract = {The ITER Ion Cyclotron Resonance Heating (ICRH) system is designed to couple to the plasma 20 MW of RF power from two antennas in the 40\textendash 55 MHz frequency range during long pulses of up to 3600 s and under various plasma conditions with Edge Localized Modes. Radio-Frequency (RF) contacts are integrated within the ITER ICRH launcher in order to ensure the RF current continuity and ease the mechanical assembly by allowing the free thermal expansion of the Removable Vacuum Transmission Line coaxial conductors during RF operations or during 250 \textdegree C baking phases. A material study has been carried out to determine which materials and associated coatings are relevant for RF contacts application in ITER. In parallel, RF tests have been performed with a new prototype of Multi-Contact\textregistered{} LA-CUT/0,25/0 contacts made of silver-coated CuCrZr louvers. During these tests on a RF vacuum resonator, currents between 1.2 kA and 1.3 kA peak have been reached a few tens of times in steady-state conditions without any visible damage on the louvers. A final 62 MHz pulse ending in a 300 s flat top at 1.9 kA resulted in severe damage to the contact. In addition, a test bed which performs sliding test cycles has been built in order to reproduce the wear of the contact prototype after 30 000 sliding cycles on a 3 mm stroke at 175 \textdegree C under vacuum. The silver coating of the louvers is removed after approximately a hundred cycles whilst, to the contrary, damage to the CuCrZr louvers is relatively low.},
   copyright = {All rights reserved},
-  file = {C\:\\Users\\JH218595\\Documents\\Bibliography\\Papers\\Fusion\\RF\\ICRH\\Hillairet et al._2018_Radiofrequency and mechanical tests of silver coated CuCrZr contacts for the ITER ion cyclotron antenna.pdf},
   journal = {Fusion Engineering and Design},
+  keywords = {\#nosource},
   language = {en}
 }
 
@@ -238,8 +241,8 @@
   doi = {10/ggc2xd},
   abstract = {The coupling between cold magnetized plasmas with lower hybrid resonance frequency antennas is generally addressed using specifically developed codes. These antenna coupling codes often approximate the plasma to a surface impedance described by a 1D half infinite models and antennas either with simplified 2D dimensions or from 3D CAD models conversion. Such approaches add an additional step of model approximation/conversion which is not convenient to rapidly assess impact of geometry changes on coupling performances. In this work, we assess the ability of using ANSYS HFSS to describe the usual range of experimental magnetized cold plasma inhomogeneous parameters facing LHRF antennas, away from resonances, in order to guide the RF designer during the design phase of an antenna. The coupling calculations of Lower Hybrid Resonance Frequency antennas are performed and successfully benchmarked with the fast coupling codes ALOHA on inhomogeneous cold magnetized plasmas. Good agreements are obtained when the boundary conditions in the full-wave modelling are properly handled. Practical advices and limitations are given in order to define correctly these boundary conditions and insure correct results.},
   copyright = {All rights reserved},
-  file = {C\:\\Users\\JH218595\\Documents\\Bibliography\\Papers\\Fusion\\RF\\LHCD\\Hillairet et al._2019_Lower hybrid range cold magnetized plasma coupling in ANSYS HFSS.pdf},
   journal = {Fusion Engineering and Design},
+  keywords = {\#nosource},
   language = {en}
 }
 
@@ -250,14 +253,14 @@
   volume = {XIII},
   url = {https://www.ansys.com/about-ansys/advantage-magazine/volume-xiii-issue-1-2019/protecting-fusion-reactors-from-extreme-heat},
   copyright = {All rights reserved},
-  file = {C\:\\Users\\JH218595\\Documents\\Bibliography\\Papers\\Fusion\\Hillairet et al._2019_Protecting Fusion Reactors from Extreme Heat.pdf;C\:\\Users\\JH218595\\Zotero\\storage\\2ICXYC2X\\Hillairet - 2019 - Protecting Fusion Reactors from Extreme Heat.pdf},
+  file = {C\:\\Users\\JH218595\\Zotero\\storage\\2ICXYC2X\\Hillairet - 2019 - Protecting Fusion Reactors from Extreme Heat.pdf},
   journal = {ANSYS Advantage},
   language = {en},
   number = {1}
 }
 
 @inproceedings{hillairet2020,
-  title = {Radio-Frequency Hands-on for Nuclear Fusion {{Master}}'s Sudents},
+  title = {Radio-Frequency Hands-on for Nuclear Fusion {{Master}}'s Students},
   booktitle = {European {{Journal}} of {{Physics}}},
   author = {Hillairet, Julien and Achard, J. and Ragona, R.},
   year = {2020},
@@ -267,7 +270,7 @@
   doi = {10/ggjf4p},
   abstract = {High-power continuous-wave radio-frequency (RF) systems in the megawatt range are commonly used in nuclear fusion experiments. Such kinds of RF systems being rather rare, Master's students do not know how these systems are used in practice \textendash{} even students engaged in nuclear fusion courses. This is the reason why, as part of the French and European Master's in fusion physics and technologies, dedicated practical work on topics related to plasma RF heating are proposed to students. Over a few days, these students discover how to perform RF measurements and succeed in characterizing real-scale components used in plasma RF heating experiments. This paper details four hands-on approaches which have been conducted over eight years with several tens of students having no prior knowledge in RF engineering.},
   copyright = {All rights reserved},
-  file = {C\:\\Users\\JH218595\\Zotero\\storage\\NVSSMBG3\\Hillairet et al_2020_Radio-frequency hands-on for nuclear fusion Master's sudents.pdf},
+  file = {C\:\\Users\\JH218595\\Zotero\\storage\\NVSSMBG3\\Hillairet et al. - 2020 - Radio-frequency hands-on for nuclear fusion Master.pdf},
   language = {en}
 }
 
