--- a/master.tex
+++ b/master.tex
@@ -345,7 +345,7 @@ numbers=noenddot, % Comment to output dots after chapter numbers; the most commo
 
 	\section*{Scientific Committee}
 	\begin{itemize}
-		\item Vice-président de la commision H (ondes dans les plasmas) de l'Union Radio-Scientifique Internationale (URSI France)
+		\item Vice-président de la commission H (ondes dans les plasmas) de l'Union Radio-Scientifique Internationale (URSI France)
 	\end{itemize}
 		
 
@@ -373,7 +373,9 @@ numbers=noenddot, % Comment to output dots after chapter numbers; the most commo
 	
 	\item Walid Helou. \textit{Design and operation of antennas at the ion cyclotron and lower hybrid range of frequencies for nuclear fusion reactors}. Aix-Marseille University, 2018.
 
-		\item Adrien Plaçais, \textit{Modélisation et mesures de l'émission secondaire de diélectriques et des phénomènes multipactor en présence de champ magnétique pour la fusion nucléaire contrôlée et le spatial}. Institut Supérieur de l'Aéronautique et de l'Espace - Université Toulouse, 2020 (prévue).
+	\item Adrien Plaçais, \textit{Modélisation et mesures de l'émission secondaire de diélectriques et des phénomènes multipactor en présence de champ magnétique pour la fusion nucléaire contrôlée et le spatial}. Institut Supérieur de l'Aéronautique et de l'Espace - Université Toulouse, 2020.
+	
+	\item Eva Al Hajj Sleiman, \textit{Détermination des marges opérationnelles relatives aux phénomènes multipactor pour des composants  radiofréquences en présence de champ magnétique et de diélectriques pour la fusion nucléaire contrôlée et le spatial.},(en cours).
 	
 	\end{itemize}
 
