--- a/tex/chap2.tex
+++ b/tex/chap2.tex
@@ -522,7 +522,7 @@ The scaling of $R_c$ for an increasing electron density with a gradient length $
 \begin{equation}
 	R_c \propto \exp\left(- \nu \left< k_\parallel \right> d_c \right)
 \end{equation}
-where $\nu$ is a constant constant representing the plasma density and its gradient and $\left< k_\parallel \right>$ a characteristic factor depending on an integration over the radiated spectrum by the antenna.  On Tore Supra, this scaling has been shown to be\sidecite{clairet2004}:
+where $\nu$ is a constant representing the plasma density and its gradient and $\left< k_\parallel \right>$ a characteristic factor depending on an integration over the radiated spectrum by the antenna.  On Tore Supra, this scaling has been shown to be\sidecite{clairet2004}:
 \begin{equation}
 R_c \propto \exp\left(- 2 \left< k_\parallel \right> d_{\mathrm{sco}} \right)
 \end{equation}
@@ -698,7 +698,7 @@ Since the wave field at the launcher aperture (and thus the launcher spectrum) d
 \marginnote{Parts of this section are taken from paper \citeauthyear{hillairet2010}.}
 % ###################################################
 \subsection{Context of this work}
-The theory of the coupling between LHRF antennas and the plasma has been developed in \sidecite[-0.5cm]{brambilla1976-1,brambilla1979} for 2D waveguides (parallel plates infinite the poloidal direction) and refined after for rectangular waveguides in \sidecite{bers1983}. In 2007, best known linear coupling codes used to design present operating antennas are Slow Wave ANtenna (SWAN) \sidecite{litaudon1990, moreau1984} or GRILL3D \sidecite[+1cm]{irzak1995}. In these codes, the toroidal lines of waveguides are assumed to be infinite in the poloidal direction and are described using a modal expansion. The modal description of the field makes possible to simulate large antennas with a moderate computing cost but the code cannot handle realistic geometry.
+The theory of the coupling between LHRF antennas and the plasma has been developed in \sidecite[-0.5cm]{brambilla1976-1,brambilla1979} for 2D waveguides (parallel plates infinite in the poloidal direction) and refined after for rectangular waveguides in \sidecite{bers1983}. In 2007, best known linear coupling codes used to design present operating antennas are Slow Wave ANtenna (SWAN) \sidecite{litaudon1990, moreau1984} or GRILL3D \sidecite[+1cm]{irzak1995}. In these codes, the toroidal lines of waveguides are assumed to be infinite in the poloidal direction and are described using a modal expansion. The modal description of the field makes possible to simulate large antennas with a moderate computing cost but the code cannot handle realistic geometry.
 
 In order to improve the antenna-plasma coupling description of SWAN code while keeping its low computational cost, a code named Advanced LOwer Hybrid Antenna (ALOHA) has been developed\sidenote{The code has been initially written by S.Berio and Ph.Bibet in 1994 \cite{berio1996}, then improved later by Damien Voyer in 2006. Since 2008, I continued to develop the code, completely rewritten since in modern Fortran with a Matlab front-end. The code development was first versioned on CEA internal servers since Nov.2009 before being \href{https://github.com/jhillairet/ALOHA}{open-sourced in on github} since Sept.2015. ALOHA has been used by different user in fusion laboratory worldwide: MIT/PSFC, ASIPP, NFRI, IPR, IPP/Prague, etc. Since 2008, ALOHA has been cited in more than 130 references.}. In ALOHA, LH antennas may be modelled by any RF full-wave commercial software or home-made code\footnote{For optimization process, a plug-in named HAMAC (Hybrid Antenna Modelling for the ALOHA Code) has been developed in the frame of the master training of Melanie Preynas in 2009 and Michal Kazda in 2010.}. The plasma coupling is calculated from a fast classical 1D modelling that describes the effect of the slow wave only\cite{brambilla1976-1} or from a more advanced 2D modelling that implies the contribution of both fast and slow waves\cite{brambilla1979, bers1983, irzak1995}.
 These calculations are based on the linear cold plasma theory and non-linear effects, such as thermal effects ("warm" dielectric tensor) and ponderomotive force have not been taken into account in the present analysis. However, some specific developments have been brought in one hand, to describe a more realistic electron density profiles taking into account the close environment of LH antennas and in the other hand, to avoid computational difficulties when the antenna is large. These assumptions let ALOHA to solve a case in a couple of seconds up to 2 hours on a 2008 desktop computer, depending on the number of waveguides of the antenna and the plasma model chosen. By comparison, a boundary element code such as the Torino Politecnico Lower Hybrid Antenna (TOPLHA) code\sidecite{milanesio2011}, required at that time high-end or super-computers to be solved. At the same time, finite element software such as COMSOL just began to be able to treat materials with generic temporally-dispersive dielectric tensors. Such approach leaves absolute freedom in the description of the antenna geometry and of the plasma within the collisional cold plasma approximation but required high computation time or resources \sidecite{meneghini2009-1, shiraiwa2011-1}. Nowadays, the Finite-Element Method can be used in more daily basis for LHCD coupling as discussed in Section~\ref{sec:LHCD_FW_antena_coupling}. However, it is still incompatible with intensive use, for example in daily experiments when one has to evaluate the effect of modules tripping on the radiated spectrum or during antenna design stage, where many calculations may be expected. In order to interpret and improve present day experiments and to design future antennas, an advanced but fast and convenient modelling tools is still convenient.
@@ -767,6 +767,7 @@ From Maxwell's equations, we recall that the electromagnetic field in a cold pla
 \left(\nabla\times\nabla\times-k_{0}^{2}\mathbf{K}\cdot\right)\left|\begin{array}{c}
 \mathbf{E}(\mathbf{r})\\
 \mathbf{H}(\mathbf{r})\end{array}\right.=0
+\label{eq:wave_equation}
 \end{equation}
 
 where $\mathbf{E}$ and $\mathbf{H}$ are the electric and magnetic fields, $\mathbf{r}=x\mbox{\ensuremath{\hat{\mathbf{x}}}}+y\hat{\mathbf{y}}+z\hat{\mathbf{z}}$ is the space vector coordinates and $k_{0}=\frac{\omega}{c}$ the free-space wavenumber. In the vicinity of the grill, the plasma is described by its (normalized) cold dielectric tensor $\mathbb{K}$ Eq.(\ref{eq:stix_K}) which is recalled here: 
@@ -946,7 +947,7 @@ close, indicating that the convergence has been reached.
 \end{figure}
 
 
-In Figure~\ref{fig:Computation-time-versus-modes}, the computation time has been plotted versus the total number of modes $N_{\mbox{modes}}$ for a simple antenna made of 8 independently fed waveguides and for the LH1 antenna (57 waveguides per row). As illustrated in the Figure~\ref{fig:Computation-time-versus-modes}, the time complexity of the coupling calculation is function of the number of waveguides and the number of modes taken into account. In both examples, the running time is proportional to the square of the product of the number of waveguides and the number of modes, i.e. $O\left(N_{\mbox{wg}}^{2}\times N_{\mbox{modes}}^{2}\right)$. In the following of this paper, 3 modes were used for all the simulations made with ALOHA. 3 modes are sufficient at low density ( $1.10^{17}\sim20.10^{17}\mbox{\ensuremath{m^{-3}}}$)
+In Figure~\ref{fig:Computation-time-versus-modes}, the computation time has been plotted versus the total number of modes $N_{\mbox{modes}}$ for a simple antenna made of 8 independently fed waveguides and for the LH1 antenna (57 waveguides per row). As illustrated in the Figure~\ref{fig:Computation-time-versus-modes}, the time complexity of the coupling calculation is function of the number of waveguides and the number of modes taken into account. In both examples, the running time is proportional to the square of the product of the number of waveguides and the number of modes, i.e. $O\left(N_{\mbox{wg}}^{2}\times N_{\mbox{modes}}^{2}\right)$. In the following of this document, 3 modes were used for all the simulations made with ALOHA. 3 modes are sufficient at low density ( $1.10^{17}\sim20.10^{17}\mbox{\ensuremath{m^{-3}}}$)
 which is the density range of interest for this work.
 
 %
@@ -1168,7 +1169,7 @@ In both cases, since it is possible to define inhomogeneous media in HFSS, one c
 In this chapter we first gave the key elements to evaluate the coupling of radio-frequency electromagnetic waves excited by antennas to cold plasma waves in a magnetized plasma, focusing only on LHCD and ICRH range of frequencies. Maximizing the transmission of several megawatts of RF power to magnetized plasma is a major topic in order to achieve high temperature plasma. RF coupling is often an issue for current fusion experiments and achieving good performances is mandatory for future reactors.
 
 
-In the LHCD range of frequencies, the open-source ALOHA code has been developed to model the LH antenna coupling. In this code, simple or advanced antenna designs can be described by any full-wave RF software in order to take into account their detailed geometry. The plasma density layers in front of the antenna can be defined by one or two linear models in order to allow a more realistic description of the scrape-off density profile in front of the antenna. The coupling between the plasma and antenna is treated with either fast and slow waves or slow wave only full or semi-analytic formulations. The code has also been successfully benchmarked to other codes or commercial FEM codes. Despite being still used today, ALOHA, like any other scientific code being about ten years old, would merit few upgrade. First of all, its core capabilities could be upgraded with the advances made in slow and fast wave coupling treatments, such as the ones made by Josef Preinhaelter in the AOLGA code\sidecite{preinhaelter2012, preinhaelter2014, preinhaelter2017-1}. Moreover, ALOHA has been developed in Matlab and Fortran, two languages that are losing momentum in the scientific community. Rewriting ALOHA in a more modern languages such as Python and Julia would allow sustaining its use for the coming years but also benefiting of the vast associated ecosystem of scientific libraries. Among them, one could think of finite-element packages so solve the plasma impedance for any arbitrary density profiles or the use of optimization (for design phases) and machine learning packages (for experiment interpretation).
+In the LHCD range of frequencies, the open-source ALOHA code has been developed to model the LH antenna coupling. In this code, simple or advanced antenna designs can be described by any full-wave RF software in order to take into account their detailed geometry. The plasma density layers in front of the antenna can be defined by one or two linear models in order to allow a more realistic description of the scrape-off density profile in front of the antenna. The coupling between the plasma and antenna is treated with either fast and slow waves or slow wave only full or semi-analytic formulations. The code has also been successfully benchmarked to other codes or commercial FEM codes. Despite being still used today, ALOHA, like any other scientific code being about ten years old, would merit few upgrade. First of all, its core capabilities could be upgraded with the advances made in slow and fast wave coupling treatments, such as the ones made by Josef Preinhaelter in the AOLGA code\sidecite{preinhaelter2012, preinhaelter2014, preinhaelter2017-1}. Moreover, ALOHA has been developed in Matlab and Fortran, two languages that are losing momentum in the scientific community. Rewriting ALOHA in a more modern languages such as Python and Julia would allow sustaining its use for the coming years but also benefiting of the vast associated ecosystem of scientific libraries. Among them, one could think of finite-element packages to solve the plasma impedance for any arbitrary density profiles or the use of optimization (for design phases) and machine learning packages (for experiment interpretation).
 
 
 In the IC range of frequency, the coupling calculations are usually performed using dedicated closed-source codes and recently also with Finite Element commercial codes such as COMSOL or HFSS. So, until recently no open-source code for the coupling of IC antennas to magnetized plasma was existing. Several initiatives to fill this gap appeared, such as the ERMES code\footnote{\url{http://tts.cimne.com/ermes/software.html}} \sidecite{otin2020} or the Finite Element suite Petra-M \footnote{\url{https://github.com/piScope/PetraM_Base}} \sidecite{shiraiwa2017-1, bertelli2020}. Collaborations have been organized with the developers of these tools, in order to progress in the analysis of the coupling conditions in WEST and first results are coming. 
