--- a/tex/chap_high_power_icrf.tex
+++ b/tex/chap_high_power_icrf.tex
@@ -49,7 +49,7 @@ A Faraday Screen is formed by an array of metallic strips (or bars), aligned wit
 
 % #####################################################
 \subsection{Matching}\label{sec:ICRH_matching_systems}
-From the RF engineer point of view, an ICRF system is equivalent to a transmission line loaded with a complex impedance (Figure~\ref{fig:icrhantennacircuitmodel}). The antenna can be view as an impedance whose properties depend on the plasma. 
+From the RF engineer point of view, an ICRF system is equivalent to a transmission line loaded with a complex impedance (Figure~\ref{fig:icrhantennacircuitmodel}). The antenna can be viewed as an impedance whose properties depend on the plasma. 
 
 \begin{figure}[h]
 	\centering
@@ -119,7 +119,7 @@ All the aspects previously listed led to iterate between RF and mechanical desig
 \begin{marginfigure}
 	\centering
 	\includegraphics[width=0.8\linewidth]{figures/chap3/WEST_ICRH/WEST_front_face_evolution1}
-	\caption{Evolution of 2D CAD models for coupling optimization.}
+	\caption{Evolution of 2D CAD models for coupling optimization. This figure is similar to a cross-section of the geometry of the figure~\ref{fig:westfrontfaceevolution2}. }
 	\label{fig:westfrontfaceevolution1}
 \end{marginfigure}
 
@@ -178,7 +178,7 @@ In order to reduce the manufacturing cost as well as to simplify the mechanical 
 	\label{fig:bridgeevolution2}
 \end{marginfigure}
 
-Also in order to facilitate the mechanical assembly of the antenna, in particular the water pipes and diagnostic cables connection, it has been proposed to enlarge the distance between the rear part of the antenna box and the rear part of the bridge, ie. the dimensions $d_1$, $d_2$ and $d_3$ are illustrated in Figure~\ref{fig:bridgeevolution2}. The influence of each dimensions on RF performances have been assessed and it was proposed to keep the 2007 prototype ($d_1$=17.7~mm) value for the WEST antenna and not increasing it (keeping this value to the minimum possible from a mechanical point of view). The $d_2$ dimension could be increased by 20~mm from the 2007 prototype ($d_2$=30.8~mm) value for the WEST antenna ($d_2\to$50~mm). Increasing the length $d_3$ means increasing the strap electrical length. A +20~m ($d_3\to$30~mm) increasing as been proposed, which impacts the matching capability of the antenna, especially for higher frequencies (50-60MHz). 
+Also in order to facilitate the mechanical assembly of the antenna, in particular the water pipes and diagnostic cables connection, it has been proposed to enlarge the distance between the rear part of the antenna box and the rear part of the bridge, ie. the dimensions $d_1$, $d_2$ and $d_3$ are illustrated in Figure~\ref{fig:bridgeevolution2}. The influence of each dimensions on RF performances have been assessed and it was proposed to keep the 2007 prototype ($d_1$=17.7~mm) value for the WEST antenna and not increasing it (keeping this value to the minimum possible from a mechanical point of view). The $d_2$ dimension could be increased by 20~mm from the 2007 prototype ($d_2$=30.8~mm) value for the WEST antenna ($d_2\to$50~mm). Increasing the length $d_3$ means increasing the strap electrical length. A +20~m ($d_3\to$30~mm) increasing has been proposed, which impacts the matching capability of the antenna, especially for higher frequencies (50-60MHz). 
 
 \begin{marginfigure}
 	\centering
@@ -638,7 +638,7 @@ The feasibility of applying Au-Ni, Ag, Ag-Sb and Rh as functional coatings for I
 	\label{fig:rfcontacttribometerresults}
 \end{figure}
 
-In addition, the development of Au-Ni/a-C and Au-Co/WS2 composite coatings and their application as electrical functional coatings in ITER has been investigated \sidecite{chen2020}. Although Au-Ni and Au-Co are commonly used coatings on electrical and electronic industries, their composite coatings were not deeply considered in the fusion research field. As seen with sliding tests, ITER ICRH RF sliding contacts will face severe adhesive wear during operation and applying solid lubricants on them is very promising. Satisfactory Au-Ni/a-C composite coatings were deposited by magnetron sputtering. A significant hardness improvement has been demonstrated in comparison with Au-Ni coating. However, due to the low lubricating efficiency of carbon materials in vacuum, these composite coatings do not have advantages in minimizing friction coefficient and wear rate compared with Au-Ni coating. Finally, An Au-Co/WS2 electroplating composite coatings process has been developed and used. A technical breakthrough was made in the WS2 particle dispersion in aqueous cyanide electrolyte\sidecite{chen2020}. Their high efficiency in minimizing friction and wear rate under ITER conditions were proved. 
+In addition, the development of Au-Ni/a-C and Au-Co/WS2 composite coatings and their application as electrical functional coatings in ITER has been investigated \sidecite{chen2020}. Although Au-Ni and Au-Co are commonly used coatings on electrical and electronic industries, their composite coatings were not deeply considered in the fusion research field. As seen with sliding tests, ITER ICRH RF sliding contacts will face severe adhesive wear during operation and applying solid lubricants on them is very promising. Satisfactory Au-Ni/a-C composite coatings were deposited by magnetron sputtering. A significant hardness improvement has been demonstrated in comparison with Au-Ni coating. However, due to the low lubricating efficiency of carbon materials in vacuum, these composite coatings do not have advantages in minimizing friction coefficient and wear rate compared with Au-Ni coating. Finally, an Au-Co/WS2 electroplating composite coatings process has been developed and used. A technical breakthrough was made in the WS2 particle dispersion in aqueous cyanide electrolyte\sidecite{chen2020}. Their high efficiency in minimizing friction and wear rate under ITER conditions were proved. 
 
 Before this thesis, no systematic study and evaluation of common functional coatings under ITER relevant conditions have been made. During this thesis, the above functional coatings were electro-deposited on CuCrZr and 316L substrates and they were deeply characterized regarding their diffusion phenomena with their substrates or with another coating after 250\degC thermal aging process. In addition, thermal aging effects on the coatings'morphology, hardness, adhesion performance, crystal structure, electrical and tribological performances were evaluated. The coefficient of friction and contact resistance $R_{contact}$ values have also been measured. All these results provide a good reference for the future studies of ITER RF sliding contacts or other projects.
 
@@ -656,11 +656,11 @@ A dedicated PhD oriented on material science has been setup with the Toulouse Un
 \section{Perspectives}
 While the Ion Cyclotron Resonance Heating have been proved working effectively to heat the core plasma of various fusion  experiments, the method has also several drawbacks. 
 
-As current ICRH antennas radiates  wave  components with $k_\parallel > k_0$, these waves are evanescent from the antenna up to the fast wave cut-off electron density, located few centimetres away in front of antenna. As this distance increases, the coupling efficiency of an antenna decreases, which often leads to operation issues. In future machine such as ITER or the future European fusion reactor DEMO, the distance from tne antenna to the plasma will become even larger.
+As current ICRH antennas radiates  wave  components with $k_\parallel > k_0$, these waves are evanescent from the antenna up to the fast wave cut-off electron density, located few centimetres away in front of antenna. As this distance increases, the coupling efficiency of an antenna decreases, which often leads to operation issues. In future machine such as ITER or the future European fusion reactor DEMO, the distance from the antenna to the plasma will become even larger.
 
 In addition, transmitting the maximum amount of RF power while protecting the RF sources from reflected power requires matching system(s). A consequence of these matching unit(s) is that the voltages and currents in the antennas can reach very high values and jeopardize the operation safety when exceeding the voltage stand-off limits.
 
-Hence, instead of resonant antennas, Travelling Wave Arrays (TWA) antennas would be a good candidate to perform ICRH in tokamaks since it solves these both drawbacks. Having a lower power density in comparison to resonant antennas, TWA antennas have hence lower voltages, avoiding exceeding voltage stand-off \sidecite{messiaen2017, ragona2017-1}. In addition, as the number of radiating elements is larger than in conventional antennas, the radiated spectrum is narrower which enhances antenna coupling to the plasma, hence allowing coupling RF power from larger distances to the plasma than current antennas. The main drawback is TWA antennas require a larger toroidal space to fit a higher number of straps. However, since the antenna does not require fancy power dividers and matching units, the volume required behind the radiating elements only consist in the feeding transmission lines. In the context of fusion reactor, this reduced footprint is a very interesting advantage when dealing with neutron-induced activation and heat losses but also leaves more space for lithium breeding blankets. For these reasons, TWA antenna designs have been proposed for DEMO \sidecite{ragona2016, ragona2019-1, noterdaeme2019}. 
+Hence, instead of resonant antennas, Travelling Wave Arrays (TWA) antennas would be a good candidate to perform ICRH in tokamaks since they solve these both drawbacks. Having a lower power density in comparison to resonant antennas, TWA antennas have hence lower voltages, avoiding exceeding voltage stand-off \sidecite{messiaen2017, ragona2017-1}. In addition, as the number of radiating elements is larger than in conventional antennas, the radiated spectrum is narrower which enhances antenna coupling to the plasma, hence allowing coupling RF power from larger distances to the plasma than current antennas. The main drawback is TWA antennas require a larger toroidal space to fit a higher number of straps. However, since the antenna does not require fancy power dividers and matching units, the volume required behind the radiating elements only consist in the feeding transmission lines. In the context of fusion reactor, this reduced footprint is a very interesting advantage when dealing with neutron-induced activation and heat losses but also leaves more space for lithium breeding blankets. For these reasons, TWA antenna designs have been proposed for DEMO \sidecite{ragona2016, ragona2019-1, noterdaeme2019}. 
 
 Despite not being a new concept \sidecite{moeller1994, vdovin2009} and already been tested at moderate powers \sidecite{ikezi1997, ogawa2001}, TWA antennas have so far never been tested for Ion Cyclotron minority heating at relevant powers. This is why, in the frame of the collaboration between LPP Brussels and ASIPP laboratories, a conceptual TWA antenna for WEST has been made designed \sidecite{ragona2019}. This concept is illustrated in Figure~\ref{fig:twawest}. As an intermediate step between the concept and a final WEST antenna, a high power mock-up has been manufactured and should be tested under vacuum in the TITAN test bed at IRFM in 2021. Depending on the results of this test, a WEST TWA antenna could be expected in the next years in order to demonstrate the theoretical benefits of such antenna over classic resonant structures.
 
