--- a/tex/chap_high_power_lhrf.tex
+++ b/tex/chap_high_power_lhrf.tex
@@ -9,7 +9,7 @@
 \epigraph{Les sciences ne sont pas comme Minerve, qui sortit tout armée du cerveau de Jupiter ; elles sont filles du temps, et se forment insensiblement, d’abord par la collection des méthodes indiquées par l’expérience, et plus tard par la découverte des principes qui se déduisent de la combinaison de ces méthodes. }{Brillat-Savarin, Physiologie du goût.}
 
 
-This chapter reviews the work done by the author on high power RF devices at CEA/IRFM for the Lower Hybrid Range of frequencies. After a general introduction on LHRF systems in Section~\ref{sec:LHCD_antennas_general}, the Section~\ref{eq:LHRF_work} review the ITER LHCD antenna (Section~\ref{sec:ITER_LHCD_antenna}). Because it is needed to bring the RF power up to the antenna, high power transmission line elements are also necessary. Work performed on the design and tests of few kinds of high power devices such as a mode converter, vacuum windows are detailed in this Chapter. 
+This chapter reviews the work done by the author on high power RF devices at CEA/IRFM for the Lower Hybrid Range of frequencies. After a general introduction on LHRF systems in Section~\ref{sec:LHCD_antennas_general}, the Section~\ref{sec:ITER_LHCD_antenna} reviews the ITER LHCD antenna. Because it is needed to bring the RF power up to the antenna, high power transmission line elements are also necessary. Work performed on the design and tests of few kinds of high power devices such as a mode converter, vacuum windows are detailed in this Chapter. 
 
 
 % #####################################################
@@ -104,7 +104,7 @@ In order to insure a lower reflected power than a conventional grill, it has bee
 	\label{fig:fourwaysplitter1module}
 \end{marginfigure}
 
-Motivated by the reduction of the RF losses and the increase of the reliability of a LH launcher, while keeping the flexibility in the parallel index $n_{\parallel}$ spectrum of the “grill” configuration (contrary to multijunction), the Alcator C-Mod team developed in 2008 a launcher (LH2) based on a four way splitter \sidecite{koert2009}. Contrary to multijunction launcher, the four way splitter divides the power in the poloidal direction. Since the power splitting is done poloidally, the launched parallel power spectrum can be changed with the same flexibility as with conventional grill antennas. This design simplified the feeding structure of the antenna, thus reducing the RF losses due to multiple power splitters and flanges of previous grill configurations, while keeping a simple manufacturing assembly. The RF power is redistributed depending on the plasma load on each of the four rows of the splitter. If the load is the same for each row, the power is evenly split among rows. The RF optimization of the launcher has been made for a source frequency of 4.6 GHz and assuming a simplified plasma load (constant) in front of each row. A similar design has been made for the KSTAR tokamak, at 5~GHz \sidecite{kim2012, kim2019}. 
+Motivated by the reduction of the RF losses and the increase of the reliability of a LH launcher, while keeping the flexibility in the parallel index $n_{\parallel}$ spectrum of the “grill” configuration (contrary to multijunction), the Alcator C-Mod team developed in 2008 a launcher (LH2) based on a four way splitter \sidecite{koert2009} (figure~\ref{fig:fourwaysplitter1module} and \ref{fig:cmodlh2}). Contrary to multijunction launcher, the four way splitter divides the power in the poloidal direction. Since the power splitting is done poloidally, the launched parallel power spectrum can be changed with the same flexibility as with conventional grill antennas. This design simplified the feeding structure of the antenna, thus reducing the RF losses due to multiple power splitters and flanges of previous grill configurations, while keeping a simple manufacturing assembly. The RF power is redistributed depending on the plasma load on each of the four rows of the splitter. If the load is the same for each row, the power is evenly split among rows. The RF optimization of the launcher has been made for a source frequency of 4.6 GHz and assuming a simplified plasma load (constant) in front of each row. A similar design has been made for the KSTAR tokamak, at 5~GHz \sidecite{kim2012, kim2019}. 
 
 
 \begin{figure}
@@ -227,7 +227,7 @@ In ITER, a main parallel index of the launched waves $n_{\parallel 0} \approx 2.
 \end{figure}
 
 In this design, the launcher is made of 48 identical modules, each independently fed by one klystron: twelve in the toroidal direction and four in the poloidal direction. A module consists of four active waveguides in the toroidal direction and six lines of waveguides in the poloidal direction (Figure~\ref{fig:3D-view_1module}). Thus, the whole launcher contains 1152 active waveguides whose dimensions are $9.25\times58$~mm. The RF power is carried through a transmission line up to a RF window
-located inside the frame and connected to a poloidal 3~dB splitter which feeds two $\TE_{10}-\TE_{30}$ mode converters. Each of these mode converters converts the incident power from the rectangular $\TE_{10}$ mode to the rectangular $\TE_{30}$ mode in order to divides the power into three poloidal rows, corresponding to the input of a 4-active waveguides multijunction. 
+located inside the frame and connected to a poloidal 3~dB splitter which feeds two $\TE_{10}-\TE_{30}$ mode converters. Each of these mode converters converts the incident power from the rectangular $\TE_{10}$ mode to the rectangular $\TE_{30}$ mode in order to divide the power into three poloidal rows, corresponding to the input of a 4-active waveguides multijunction. 
 
 \begin{figure}
 	\includegraphics[width=1.0\textwidth]{figures/chap3/ITER_antenna/LH4ITER_1module}
@@ -491,7 +491,7 @@ In the frame of the Lower Hybrid R\&D for ITER activities conducted at CEA/IRFM,
 % ############################################
 \subsection{Context}
 \marginnote{Parts of this section are taken from \citeauthyear{hillairet2015}.}
-A tokamak operates at pressures different from the transmission line pressure. RF windows intend to isolate these different pressures but allow propagation of the microwaves with low losses and limited RF power reflection. Vacuum vessel operates at ultra-low pressure, typically $10^{-4}$ to $10^{-6}$~\si{Pa}, while transmission lines can contain atmospheric pressure or pressurized gas to increase the breakdown voltage. Consequently, the window must be sufficiently strengthened to withstand differential pressures of the order of several tens of \si{kPa}. On the other hand, window must withstand mechanical stresses such as shock and vibration, and important temperature variations. Window failures can be caused by reflected power, vacuum arcs/multipactor or too much heat dissipation \sidecite{vaughan1961, ikeda1989, neuber1998, hemmert1998}. In the case of a fusion reactor such like ITER, the windows are also part of the first nuclear confinement barrier.
+A tokamak operates at pressures different from the transmission line pressure. RF windows intend to isolate these different pressures but allow propagation of the microwaves with low losses and limited RF power reflection. Vacuum vessel operates at ultra-low pressure, typically $10^{-4}$ to $10^{-6}$~\si{Pa}, while transmission lines can contain atmospheric pressure or pressurized gas to increase the breakdown voltage. Consequently, the window must be sufficiently strengthened to withstand differential pressures of the order of several tens of \si{kPa}. On the other hand, window must withstand mechanical stresses such as shock and vibration, and important temperature variations. Window failures can be caused by reflected power, vacuum arcs/multipactor or too much heat dissipation \sidecite{vaughan1961, ikeda1989, neuber1998, hemmert1998}. In the case of a fusion reactor like ITER, the windows are also part of the first nuclear confinement barrier.
 
 As the dimensions of the tokamak access ports are limited, the number of transmission lines connected to the antenna is limited too. In order to fit into the available space, to simplify the assembly design and to improve the maintenance of the system, the number of transmission lines and thus the number of RF windows must be kept as low as possible. This leads to increase the power handling capability of each transmission line, and ultimately of each window.
 
@@ -524,7 +524,7 @@ In the 2001 initial Lower Hybrid (LH) antenna design, 24 RF windows were set on 
 
 As highlighted in \sidecite{ao2014}, the relative dielectric properties of the ceramic disk depend on the manufacturer, even when the same manufacturer and ceramic batch are used. At the frequency of 5~GHz, the dielectric losses (loss tangent) of aluminium oxide (Al2O3), aluminium nitride (AlN) or Beryllium Oxyde (BeO) are of the same order ($\tan\delta \approx 10^{-4}$). The choice for BeO ceramic is motivated by its larger thermal conductivity (in the range of 330 to 370~\si{W/m/K} at room temperature) than the other ones (in the range of 30~\si{W/m/K} for Al2O3 and 70-180~\si{W/m/K} for AlN). BeO is used in high power 3.7~GHz and 5~GHz klystrons windows. In order to determine the final thickness of the windows, the BeO ceramic RF properties must be known with accuracy. A BeO sample has been requested from the ceramic manufacturer (American Beryllia) with the guarantee that the final ceramics will be made from the same lot. The sample has been characterized within a RF resonant cavity setup in collaboration with the XLIM laboratory\footnote{The authors thanks Olivier Tantot and Damien Passerieux from the XLIM Laboratory in Limoges, France, where the dielectric measurements on BeO samples have been conducted.} \sidecite{lefloch2014}. The measurement of the BeO sample has been made at two surrounding frequencies and the results are given in \citeauthyear{hillairet2015}. The relative permittivity and the loss tangent at 5~GHz have been calculated from a linear interpolation of the measured values, to be $\varepsilon_{r}=6.36\pm0.159$ and $\tan \delta = 4.30\times 10^{-4}\pm3.82\times 10^{-5}$ respectively. 
 
-\begin{marginfigure}[-3cm]
+\begin{marginfigure}
 	\centering
 	\includegraphics[width=1.0\linewidth]{figures/chap3/ITER_window/ITER_windows_main_dimensions}
 	\caption{Main dimensions of the final 5 GHz RF window prototype. }
@@ -655,7 +655,7 @@ Infra-red (IR) measurements of the ceramic temperature have been made during hig
 	\label{fig:iterwindowsbeotemperature}
 \end{figure}
 
-Moreover, the cooling time constant is around twice larger than expected from ideal thermal modelling, indicating that a thermal barrier reduces the heat conduction efficiency. The losses are not affected by a degradation of the cooling efficiency as the dissupated power does not depend on the thermal conductivity (if we assume that the dielectric loss tangent does not change with the temperature increase). 
+Moreover, the cooling time constant is around twice larger than expected from ideal thermal modelling, indicating that a thermal barrier reduces the heat conduction efficiency. The losses are not affected by a degradation of the cooling efficiency as the dissipated power does not depend on the thermal conductivity (if we assume that the dielectric loss tangent does not change with the temperature increase). 
 
 The fact that the BeO central temperature increases to temperatures higher than 300$\si{\degreeCelsius}$ prevent these two windows prototype to be used in CW regime at full power without exceeding the mechanical stress limits of the ceramic. The first ceramic window prototype was found to be cracked after disassembly from the test-bed. Following this observation, the maximum power and the pulse length has been reduced for the following tests of the second window, in order not to exceed a maximum IR measured temperature of 100$\si{\degreeCelsius}$ to avoid high temperature gradient between the ceramic core and its periphery cooled by the 20-25$\si{\degreeCelsius}$ water loop. 
 
