--- a/tex/intro.tex
+++ b/tex/intro.tex
@@ -11,7 +11,7 @@ The Chapter \ref{chap:fusion_and_rf} is an introduction to the controlled nuclea
 
 The Chapter \ref{chap:RF_fundamentals} recalls the theoretical elements of the electromagnetic theory which are necessary for the daily work of a RF engineer working in RF Heating and Current Drive systems for tokamaks. This chapter is not intended to teach specialists in the RF field anything, but just to bring together in one place the essential RF quantities and figures or merit. 
 
-The Chapter \ref{chap:rf_coupling} describes my work on the coupling of RF waves from antennas to tokamak plasmas. After in introduction to waves in plasma, in particular in the Ion Cyclotron and Lower Hybrid range of frequencies, we describe the Lower Hybrid Range of Frequency (LHRF) coupling code ALOHA and some examples of its use on Tore Supra experiments. The last part of this chapter is dedicated to the use of full-wave software for the coupling calculations.
+The Chapter \ref{chap:rf_coupling} describes my work on the coupling of RF waves from antennas to tokamak plasmas. After an introduction to waves in plasma, in particular in the Ion Cyclotron and Lower Hybrid range of frequencies, we describe the Lower Hybrid Range of Frequency (LHRF) coupling code ALOHA and some examples of its use on Tore Supra experiments. The last part of this chapter is dedicated to the use of full-wave software for the coupling calculations.
 
 The Chapters \ref{chap:ICRF} and \ref{chap:LHRF} describe my work for the design and tests of high power devices for RF heating and current drive in tokamaks. Chapter 4 is dedicated to Ion Cyclotron Range of Frequency (ICRF). It concerns my work on the WEST ICRF antennas design and modelling which has started in 2013. Another important topic of this chapter concerns the R\&D performed on the ITER ICRF system, specifically on RF contacts. The Chapter 5 addresses the design and tests of RF devices for the LHRF from 2010 to 2014, which concerns in particular components for the then foreseen ITER LHCD system.
 
